--- a/package.json
+++ b/package.json
@@ -7,18 +7,22 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.7",
+    "axios": "^1.6.8",
     "date-fns": "^3.3.1",
+    "formik": "^2.4.5",
     "nanoid": "^5.0.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-content-loader": "^7.0.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
     "react-svg": "^16.1.33",
     "styled-components": "^6.1.8",
-    "web-vitals": "^2.1.4"
+    "styled-media-query": "^2.1.2",
+    "web-vitals": "^2.1.4",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
